--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am Swarna Madhuri</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Student, Developer, Freelancer, Photographer"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Master's Student, Software Developer, Freelancer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -91,7 +91,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Swarna Madhuri Pichikala</span></p>
-                        <p><span class="title-s">Profile: </span> <span>MS CS at UTD</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Software Engineer/SDE</span></p>
                         <p><span class="title-s">Email: </span> <span>swarnapichikala@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>(469) 427-7958</span></p>
                         <p><a target="_blank" class="fcc-btn" href="assets/img/SwarnaResume.pdf"><button>Resume</button></a>  
@@ -100,22 +100,31 @@
                     </div>
                   </div>
                   <div class="skill-mf">
-                    <p class="title-s">Skills</p>
-                    <span>C++</span> <span class="pull-right">85%</span>
+                    <h5 class="title-left">Skills</h5>
+                    <p></p>
+                    <span>C++</span> <span class="pull-right"> 85%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Java</span> <span class="pull-right">75%</span>
+                    <span>Java</span> <span class="pull-right"> 85%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Spring Boot</span> <span class="pull-right">50%</span>
+                    <span>Spring Boot</span> <span class="pull-right"> 85%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>SQL</span> <span class="pull-right">90%</span>
+                    <span>SQL</span> <span class="pull-right"> 90%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>Database Management</span> <span class="pull-right"> 90%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>Software Development</span> <span class="pull-right"> 85%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -167,7 +176,7 @@
 
               </div>
               <div class="service-content">
-                <h2 class="s-title">SheStore</h2>
+                <h2 class="s-title"><a href="https://github.com/SwarnaMadhuriP">SheStore</a></h2>
                 <p class="s-description text-center">
                   SheStore is an e-commerce website offering a diverse range of female beauty products across various categories.             </p>
               </div>
@@ -209,7 +218,7 @@
 
               </div>
               <div class="service-content">
-                <h2 class="s-title">Online Complaint Registration App</h2>
+                <h2 class="s-title"><a href="https://github.com/SwarnaMadhuriP">Online Complaint Registration App</a></h2>
                 <p class="s-description text-center">
                   Worked in a team of four to Develop a simple android App. It helps in managing customer complaints in a store
 seamlessly. Used Java, Android Studio, and MySQL to develop the app.
@@ -453,8 +462,6 @@ seamlessly. Used Java, Android Studio, and MySQL to develop the app.
                     <div class="title-box-2">
                       <h5 class="title-left">
                         Student Assistant <span><img src="assets/img/utd.jpg" width="50" height = "50"></span>
-
-                      
                       </h5>
                     </div>
                     <p class="lead">
@@ -470,7 +477,7 @@ seamlessly. Used Java, Android Studio, and MySQL to develop the app.
                 <div class="about-me pt-4 pt-md-0">
                   <div class="title-box-2">
                     <h5 class="title-left">
-                      Software Engineer <span><img src="assets/img/moneyview.jpg" width="50" height = "50"></span>
+                     <span>Software Engineer</span><span><img src="assets/img/moneyview.jpg" width="50" height = "50"></span>
                     </h5>
                   </div>
                   <p class="lead">
@@ -484,7 +491,7 @@ seamlessly. Used Java, Android Studio, and MySQL to develop the app.
                 <div class="about-me pt-4 pt-md-0">
                   <div class="title-box-2">
                     <h5 class="title-left">
-                      Software Engineer Intern <span><img src="assets/img/moneyview.jpg" width="50" height = "50"></span>
+                      <span>Software Engineer Intern</span><span><img src="assets/img/moneyview.jpg" width="50" height = "50"></span>
                     </h5>
                   </div>
                   <p class="lead">
@@ -554,7 +561,7 @@ seamlessly. Used Java, Android Studio, and MySQL to develop the app.
                     <div class="socials">
                       <ul>
                         <li><a href="https://www.linkedin.com/in/swarnapichikala/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
+                        <li><a href="https://www.instagram.com/swarna_madhuri/"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
 
                       </ul>
                     </div>
