--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li><a class="nav-link scrollto " href="#workexperience">Work Experience</a></li>
           <!-- <li><a class="nav-link scrollto " href="#blog">Blog</a></li> -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="nav-link scrollto " target="_blank" href="assets/img/SwarnaResume.pdf">Resume</a></li>
+          <li><a class="nav-link scrollto " target="_blank" href="assets/img/Resume.pdf">Resume</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -94,7 +94,7 @@
                         <p><span class="title-s">Profile: </span> <span>Software Engineer/SDE</span></p>
                         <p><span class="title-s">Email: </span> <span>swarnapichikala@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>(469) 427-7958</span></p>
-                        <p><a target="_blank" class="fcc-btn" href="assets/img/SwarnaResume.pdf"><button>Resume</button></a>  
+                        <p><a target="_blank" class="fcc-btn" href="assets/img/Resume.pdf"><button>Resume</button></a>  
                         </p>
                       </div>
                     </div>
