--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                       I am currently pursuing my Master's degree in Computer Science from the University of Texas at Dallas, I have a strong academic background. With nearly 2 years of experience in the software industry, I have honed my skills working in the fintech sector. I served as a backend developer at a startup in India, utilizing Java and Spring Boot to implement internal features efficiently.
                     </p>
                     <p class="lead">
-                      My involvement in the fintech industry has given me a comprehensive understanding of its inner workings. I am particularly passionate about problem-solving and seek opportunities to leverage my knowledge in practical applications. I am eager to join an organization or team that tackles real-world problems and allows me to make a meaningful impact. Please reach out to me for my resume.
+                      My experience in the fintech industry has given me a comprehensive understanding of its inner workings. I am particularly passionate about problem-solving and seek opportunities to leverage my knowledge in practical applications. I am eager to join an organization or team that tackles real-world problems and allows me to make a meaningful impact. Please reach out to me for my resume.
                     </p>
                     </p>
                   </div>
